[package]
name = "tictactoe-server"
version = "0.0.1"
authors = ["ondradoksy <ondradoksy@ondradoksy.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tungstenite = "0.20.1"