[package]
name = "tictactoe-server"
version = "0.0.1"
authors = ["ondradoksy <ondradoksy@ondradoksy.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
image = "0.24.9"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
tungstenite = "0.21.0"

[dev-dependencies]
jzon = "0.12.5"
