[package]
name = "tictactoe-server"
version = "1.0.0"
authors = ["ondradoksy <ondradoksy@ondradoksy.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
image = "0.25.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
tungstenite = "0.23.0"

[dev-dependencies]
jzon = "0.12.5"

[profile.dev]
debug = true